# modern-apis-with-fastapi

./: main.py  pyproject.toml
